--- a/src/components/EventCard.css
+++ b/src/components/EventCard.css
@@ -1,14 +1,13 @@
 .container{
     display: grid;
     overflow: hidden;
-    padding: 50px;
     padding-right: 50px;
-}
-.header{
-    margin-bottom: 5px;
-    padding: 10px;
+    padding: 20px;
 }
 
+.cardName{
+    margin-bottom: 10px;
+}
 .card{
     color: black;
     display: grid;
