--- a/src/pages/User.css
+++ b/src/pages/User.css
@@ -1,4 +1,3 @@
-
 .profile-container {
     display: flex;
     flex-direction: column;
@@ -6,10 +5,14 @@
     justify-content: center;
     height: 100%;
     padding: 1rem;
-  }
-  
-  .profile-name {
+}
+
+.profile-container > * {
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+
+.profile-name {
     font-size: 1.5rem;
     margin-top: 1rem;
-  }
-  
+}
