old files archived

--- a/src/components/EventDetails.css
+++ b/src/components/EventDetails.css
@@ -1,4 +1,4 @@
-.foodCard{
+/* .foodCard{
     text-align: center;
     text-decoration: solid;
 }
@@ -15,4 +15,4 @@
 }
 .mapCard{
     margin-bottom: 60px;
-}
+} */
