update app.css and imports

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,9 @@
-.flex-center{
+#root {
+    height: 100%;
+}
+.flex-center {
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     height: 90%;
 }
