fix placement of profile button

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -7,3 +7,13 @@
     align-items: center;
     height: 90%;
 }
+
+.profile-button-container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.chip-container {
+    margin: 0;
+}
